; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_debug_color.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_debug_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_color = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [7 x i8] c"(null)\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"{%.8e, %.8e, %.8e, %.8e}\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @debug_color(%struct.wined3d_color* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.wined3d_color*, align 8
  store %struct.wined3d_color* %0, %struct.wined3d_color** %3, align 8
  %4 = load %struct.wined3d_color*, %struct.wined3d_color** %3, align 8
  %5 = icmp ne %struct.wined3d_color* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %21

7:                                                ; preds = %1
  %8 = load %struct.wined3d_color*, %struct.wined3d_color** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_color, %struct.wined3d_color* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.wined3d_color*, %struct.wined3d_color** %3, align 8
  %12 = getelementptr inbounds %struct.wined3d_color, %struct.wined3d_color* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.wined3d_color*, %struct.wined3d_color** %3, align 8
  %15 = getelementptr inbounds %struct.wined3d_color, %struct.wined3d_color* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.wined3d_color*, %struct.wined3d_color** %3, align 8
  %18 = getelementptr inbounds %struct.wined3d_color, %struct.wined3d_color* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i8* @wine_dbg_sprintf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i32 %10, i32 %13, i32 %16, i32 %19)
  store i8* %20, i8** %2, align 8
  br label %21

21:                                               ; preds = %7, %6
  %22 = load i8*, i8** %2, align 8
  ret i8* %22
}

declare dso_local i8* @wine_dbg_sprintf(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
